--- a/apache/mediawiki.apache.conf
+++ b/apache/mediawiki.apache.conf
@@ -15,7 +15,7 @@ LoadModule rewrite_module /usr/lib/apache2/mod_rewrite.so
         DirectoryIndex index.php
         AllowOverride None
         Require all granted
-        IncludeOptional /var/www/html/data/htaccess.txt
+        IncludeOptional /var/www/html/.htaccess
     </Directory>
     
     # Custom Directory and Location rules
